# manual-table

./: .gitignore  README.md  pyproject.toml
src/: main.py  test.py
