[project]
name = "manual-timetable"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Zaim Maalim Sheali", email = "rehanamahmoud48@gmail.com" }
]
dependencies = [
    "flet>=0.82.2",
    "flet-permission-handler",
    "pyjnius",
    "flet-android-notifications"
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.2",
    "flet-desktop>=0.82.2",
    "flet-web>=0.82.2",
]

[tool.flet]
org = "zaim_tech.org"
product = "manual-timetable"
company = "Smart Elimu Connect"
copyright = "Copyright (C) 2026 by zaim tech"

[tool.flet.app]
path = "src"
exclude = ["flet_android_notifications"]

[tool.flet.android.permission]
"android.permission.POST_NOTIFICATIONS" = true
"android.permission.SCHEDULE_EXACT_ALARM" = true
"com.android.alarm.permission.SET_ALARM" = true
"android.permission.RECEIVE_BOOT_COMPLETED" = true
"android.permission.FOREGROUND_SERVICE" = true
"android.permission.FOREGROUND_SERVICE_SPECIAL_USE" = true

[tool.flet.dev_packages]
flet-android-notifications = "flet_android_notifications"